Fix alignment of charts on same row

--- a/public/index.css
+++ b/public/index.css
@@ -15,9 +15,10 @@ span.highlight {
 }
 
 div.chart {
+  display:           inline-block;
   width:             45%;
   text-align:        center;
-  display:           inline-block;
+  vertical-align:    top;
   margin-bottom:     2em;
   page-break-inside: avoid;
 }
